[package]
name = "akaze"
version = "0.1.3"
edition = "2018"
authors = ["John Stalbaum <indianajohn@github>", "Geordon Worley <vadixidav@gmail.com>"]
description = "A Rust implementation of the A-KAZE algorithm."
homepage = "https://github.com/indianajohn/akaze-rust/"
repository = "https://github.com/indianajohn/akaze-rust/"
readme = "../README.md"
keywords = ["CV", "vision", "sfm", "features", "descriptors"]
categories = ["science::robotics", "multimedia::images", "computer-vision"]
license = "MIT"

[dependencies]
image = "0.23.0"
log = { version = "0.4.8", default-features = false }
primal = { version = "0.2.3", default-features = false }
num_cpus = { version = "1.12.0", default-features = false }
scoped_threadpool = { version = "0.1.9", default-features = false }
random = { version = "0.12.2", default-features = false }
serde = { version = "1.0.104", default-features = false, features = ["std", "derive"] }
nalgebra = { version = "0.19.0", default-features = false, features = ["std", "alloc"] }
bitflags = "1.2.1"

[dev-dependencies]
env_logger = { version = "0.7.1", default-features = false }
approx = "0.3.2"

[profile.release]
codegen-units = 1
